--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,31 +6,17 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>Web Stuff</title>
+  <title>Movie Stuff</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" href="/css/main.css">
   <script data-main="js/main" src="/js/require.js"></script>
 </head>
-
 <body>
-
-  <div id="container">
-    <header>
-
-    </header>
-    <div id="main" role="main">
-      <%= yield %>
-    </div>
-    <footer>
-
-    </footer>
-  </div> <!-- eo #container -->
-
-
-  
+  <div id="main" role="main">
+    <%= yield %>
+  </div>
 </body>
 </html>
