--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,22 @@
 body {
-  padding: 10px;
   background: #f9f9f9; }
+
+.primary-nav {
+  background: #428bca;
+  box-shadow: inset 0 -2px 5px rgba(0, 0, 0, 0.1); }
+  .primary-nav .active {
+    color: #fff; }
+
+.nav-item {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  font-weight: 500;
+  color: #cdddeb; }
+
+.movies {
+  background: #fff;
+  padding: 30px 15px;
+  border-left: 1px solid #dadada;
+  border-right: 1px solid #dadada;
+  border-bottom: 1px solid #dadada; }
