add infinite scroll

--- a/static_assets/sass/main.sass
+++ b/static_assets/sass/main.sass
@@ -19,7 +19,11 @@ body
 
 .movies
   background: #fff
-  padding: 30px 15px
+  padding: 30px 30px
   border-left: 1px solid #dadada
   border-right: 1px solid #dadada
   border-bottom: 1px solid #dadada
+
+.movies-table
+  &.table > tbody > tr > td
+    vertical-align: middle
