work on table sort

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,8 @@ body {
   padding: 30px 30px;
   border-left: 1px solid #dadada;
   border-right: 1px solid #dadada;
-  border-bottom: 1px solid #dadada; }
+  border-bottom: 1px solid #dadada;
+  min-height: 500px; }
 
 .movies-table.table > tbody > tr > td {
   vertical-align: middle; }
