--- a/static_assets/sass/main.sass
+++ b/static_assets/sass/main.sass
@@ -23,6 +23,7 @@ body
   border-left: 1px solid #dadada
   border-right: 1px solid #dadada
   border-bottom: 1px solid #dadada
+  min-height: 500px
 
 .movies-table
   &.table > tbody > tr > td
